# devtools

./: .gitignore  run_update_projects.sh
CodeGraphAI/: .flake8  .gitignore  .isort.cfg  1.3.0  2.2.0  IMPLEMENTATION_SUMMARY.md  README.md  README_AGENT.md  analyzer.py  config.py  example.env  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  table_analyzer.py  update_mermaid_files.py
CodeGraphAI/.cursor/documentation/: api-catalog.md  architecture.md  database-adapters.md  improvement-roadmap.md  integration-flows.md  open-questions.md  performance-analysis.md  project-overview.md  security-overview.md
CodeGraphAI/app/: __init__.py
CodeGraphAI/app/agents/: __init__.py  code_analysis_agent.py
CodeGraphAI/app/analysis/: __init__.py  code_crawler.py  fast_indexer.py  models.py  on_demand_analyzer.py  static_analyzer.py
CodeGraphAI/app/config/: __init__.py  config.py
CodeGraphAI/app/core/: __init__.py  dry_mode.py  models.py
CodeGraphAI/app/graph/: __init__.py  (+2 more)
CodeGraphAI/docs/: DATABASE_ADAPTERS.md  QUANTIZED_MODEL_SUPPORT.md
CodeGraphAI/examples/: agent_example.py  download_model_weights.py  test_embeddings_local.py  test_embeddings_simple.py  test_quantized_embeddings.py
CodeGraphAI/test_procedures/: complex_proc.prc  main_proc.prc  simple_proc.prc  sub_proc.prc
CodeGraphAI/tests/: README.md  __init__.py  cleanup_test_data.sh  conftest.py  setup_test_env.sh  test_config.py  test_env_loader.py  test_llm_analyzer.py  test_procedure_analyzer.py  test_procedure_loader.py  test_quantized_integration.py  test_table_analyzer.py
(+95 files in other folders)
