[project]
name = "codegraphai"
requires-python = ">=3.8"
description = "Análise inteligente de procedures e tabelas de banco de dados usando IA"
readme = "README.md"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | \.eggs
  | \.egg-info
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["analyzer", "config"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    'tests/',
    'build/',
    'dist/',
    '\.venv/',
    'venv/',
]

[[tool.mypy.overrides]]
module = [
    "oracledb.*",
    "langchain.*",
    "langchain_community.*",
    "transformers.*",
    "networkx.*",
    "matplotlib.*",
    "click.*",
    "tqdm.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

